--- a/src/client/index.html
+++ b/src/client/index.html
@@ -4,6 +4,6 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <script src="/modules/main.js"></script>
+    <script src="/node_modules/requirejs/require.js" data-main="modules/main"></script>
   </body>
 </html>
