CRAZY EXPERIMENT take 2

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -7,6 +7,6 @@
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700' rel='stylesheet' type='text/css'>
   </head>
   <body>
-    <script src="/modules/main.js"></script>
+    <script src="/node_modules/requirejs/require.js" data-main="/modules/main"></script>
   </body>
 </html>
