--- a/src/client/index.html
+++ b/src/client/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="/css/all.css">
-    <title>Black Phoenix</title>
+    <title>Weekly Review</title>
   </head>
   <body>
     <script src="/modules/main.js"></script>
